# llm_learn

./: .env  .gitignore  README.md  makefile  mnist.py  podman-script.sh  pyproject.toml  tokenizaion.py  torch_attention.py  torch_ddp.py  torch_self_attention.py
infra/: pyproject.toml
infra/bench/: bench_one.py  plot.py  pyproject.toml  run_all.sh
infra/bench/bench_results/: sglang_dp.json  sglang_single.json  sglang_tp.json  vllm_dp.json  vllm_single.json  vllm_tp.json
infra/cuda/: coalescing_demo.cu  cuda_graph_capture.cu  event_sync.cu  hello_gpu.cu  matmul_naive.cu  matmul_tiled.cu  nccl_allreduce.cu  occupancy_demo.cu  p2p_tensor_parallel.cu  pipeline_overlap.cu  vector_add.cu  vector_add_2d.cu  vector_reduce_max.cu
infra/cuda/custom_ops/: compare.py  fused_gelu_kernel.cu  fused_gelu_warp.py  layernorm_kernel.cu  setup.py
infra/sglang/: pyproject.toml
infra/vllm/: first_inference.py  pyproject.toml
notebooks/: small-mrcr-test.ipynb  test-minimax.ipynb  test-minimax.py
src/data/: clean_cc_bc.py  preprocess_cli.py
src/deepseek/: experiment_mla.py  sparse_moe.py
src/gpt/: __init__.py  cli.py  config.py  data.py  model.py  trainer.py
src/misc/: env_check.py  graph.py  hf_base_op.py  mnist.py  model_profiler.py  torch_base_op.py  torch_ddp.py  transformers_bert.py  use_tokenizer.py
src/transformer/: __init__.py  config.py  inference.py  interactive.py  model.py  prepare_data.py  train.py
src/util/: ddp_helper.py
tests/: conftest.py  test_torch_attention.py
