[project]
name = "llm-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "deptry>=0.23.1",
]
