[project]
name = "llm-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typer>=0.20.0",
]

[project.scripts]
transformer-train = "src.transformer.train:app"
transformer-interactive = "src.transformer.interactive:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/misc", "src/transformer", "src/util", "src/gpt"]

[dependency-groups]
dev = [
    "deptry>=0.23.1",
]
