[project]
name = "infra-sglang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "httpx[socks]>=0.28.1",
    "sglang",
]

[tool.uv.sources]
sglang = { url = "https://github.com/QingGo/sglang/releases/download/v0.5.10-sm75-only/sglang-0.5.10+sm75-py3-none-any.whl" }
